[package]
name = "rdf"
version = "0.0.1"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = ""
keywords = ["rdf", "structured", "data"]
documentation = "https://endoli.github.io/rdf.rs"
homepage = "https://github.com/endoli/rdf.rs"
repository = "https://github.com/endoli/rdf.rs"

build = "build.rs"

[build-dependencies]
lalrpop = "0.15.0"

[dependencies]
lalrpop-util = "0.15.0"
